--- a/day03/xiaohuar/scrapy.cfg
+++ b/day03/xiaohuar/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = xiaohuar.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:120]
+url = http://llserver/
 project = xiaohuar
